--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -14,7 +14,15 @@
     <Label class="action-bar-title" text="Couple-Tivity"></Label>
 </ActionBar>
 
-<GridLayout class="page page-content">
-    <Label class="page-icon fa" text="&#xf015;"></Label>
-    <Label class="page-placeholder" text="<!-- Page content goes here -->"></Label>
+<GridLayout>
+    <ScrollView class="page-content">
+        <StackLayout class="manage-panel">
+            <Label class="text-center text-primary m-y-10 font-weight-bold" text="Add a new activity" textWrap="true"></Label>
+            <StackLayout class="hr-light m-10"></StackLayout>
+            <RadDataForm [source]="activity"></RadDataForm>
+
+            <Button text="Submit Activity" class="m-t-4 btn btn-primary btn-rounded-lg" (tap)="submit()"></Button>
+
+        </StackLayout>
+    </ScrollView>
 </GridLayout>
