initial build v1.0.0 of Couple-Tivity

--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -60,7 +60,7 @@ $sidedrawer-list-icon-size: 20;
     }
 
     .sidedrawer-header {
-        background-color: $ab-background;
+        background-color: $background-light;
 
         .sidedrawer-header-brand {
             color: $ab-color;
