--- a/App_Resources/Android/src/main/res/drawable-nodpi/splash_screen.xml
+++ b/App_Resources/Android/src/main/res/drawable-nodpi/splash_screen.xml
@@ -3,6 +3,6 @@
         <bitmap android:gravity="fill" android:src="@drawable/background" />
     </item>
     <item>
-        <bitmap android:gravity="center" android:src="@drawable/logo" />
+        <bitmap android:gravity="center" android:src="@drawable/icon" />
     </item>
 </layer-list>
