--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,8 @@ http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawe
 -->
 <RadSideDrawer [drawerTransition]="sideDrawerTransition">
     <GridLayout tkDrawerContent rows="auto, *" class="sidedrawer sidedrawer-left">
-        <StackLayout row="0" class="sidedrawer-header">
-            <Label class="sidedrawer-header-image fa" text="&#xf2bd;"></Label>
-            <Label class="sidedrawer-header-brand" text="User Name"></Label>
-            <Label class="footnote" text="username@mail.com"></Label>
+        <StackLayout row="0" class="sidedrawer-header text-center">
+            <Image height="120" src="res://icon" class="text-center"></Image>
         </StackLayout>
 
         <ScrollView row="1">
